--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ a {
   text-decoration: none;
 }
 
-h2 {
+h2, p {
   margin: 0;
 }
 
@@ -198,11 +198,14 @@ body {
 }
 
 .servises__item {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
   margin: 2px;
-  padding: 40px;
+  padding: 30px;
   flex-basis: 500px;
   background: #FDF0E9;
-  border: 1.5px solid #F3D1BF;
+  border: 2.5px solid #F3D1BF;
   border-radius: 6px;
   position: relative;
 }
@@ -239,23 +242,26 @@ body {
   text-decoration: underline;
 }
 
-.item__icon {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-}
-
 .item__title {
   font-size: 24px;
   font-weight: 700;
   line-height: 32px;
   letter-spacing: 0px;
   text-align: left;
-  padding-top: 4px;
-  padding-left: 80px;
-  padding-bottom: 30px;
+  padding-left: 14px;
+  padding-bottom: 20px;
 }
 
+.item__text {
+  display: flex;
+  margin-bottom: 15px;
+}
+
+.item__text__image {
+  height: 6px;
+  width: 20px;
+  margin: 10px;
+}
 .item__button {
   font-size: 16px;
   font-weight: 400;
@@ -1279,12 +1285,7 @@ body {
     padding-top: 30px;
   }
 
-  .item__title {
-    padding: 10px 10px 10px 60px;
-    position: relative;
-    font-size: 20px;
-  }
-
+/* 
   .item__title::before {
     content: url(/img/icon.svg);
     position: absolute;
@@ -1295,12 +1296,11 @@ body {
     top: -9px;
     text-align: center;
     line-height: 30px;
-
-  }
+  } 
 
   .item__icon {
     display: none;
-  }
+  } */
 
   .servises__title {
     padding: 0 15px;
@@ -1325,7 +1325,6 @@ body {
 
   .servises__bottom {
     flex-direction: column;
-
     align-items: center;
     padding: 10px;
   }
