--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,48 +1,6 @@
-.header {
-  background-color: #28293E;
-}
+@import "header.scss";
+@import "normalizze.scss";
 
-.header__content {
-  display: flex;
-  justify-content: space-between;
-  height: 90px;
-  align-items: center;
-}
-
-.logo__img {
-  width: 170px;
-  height: 48px;
-}
-
-.header__nav {
-  color: #fff;
-  display: flex;
-}
-
-#hamnav label,
-#hamburger {
-  display: none;
-}
-
-.nav__link {
-  font-size: 20px;
-  font-weight: 500;
-  color: #fff;
-  padding: 0;
-}
-
-.nav__link + .nav__link {
-  margin-left: 100px;
-}
-
-.nav__link:hover {
-  color: #EF6D58;
-}
-
-.header__button {
-  width: 138px;
-  height: 48px;
-}
 
 * {
   box-sizing: border-box;
@@ -67,7 +25,7 @@ button {
 }
 
 :hover {
-  transition: all 0.3s;
+  transition: all .3s;
 }
 
 ul {
@@ -77,7 +35,7 @@ ul {
 }
 
 body {
-  font-family: "Jura", sans-serif;
+  font-family: 'Jura', sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
@@ -89,6 +47,7 @@ body {
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 15px;
+
 }
 
 .button {
@@ -96,7 +55,7 @@ body {
   border-radius: 6px;
   font-weight: 700;
   border: 1px solid;
-  border-color: rgba(255, 255, 255, 0.6392156863);
+  border-color: #ffffffa3;
   color: #ffffff;
 }
 
@@ -110,6 +69,7 @@ body {
   background-color: #28293E;
   padding-bottom: 150px;
 }
+
 
 .greeting {
   display: flex;
@@ -129,7 +89,7 @@ body {
 .works__subtitle {
   margin: 0;
   padding-top: 100px;
-  color: rgba(239, 108, 88, 0.5254901961);
+  color: #ef6c5886;
   font-size: 16px;
   font-weight: 200;
   line-height: 32px;
@@ -144,7 +104,7 @@ body {
 }
 
 .text__content {
-  color: rgba(255, 255, 255, 0.6392156863);
+  color: #ffffffa3;
   font-size: 16px;
   font-weight: 400;
   line-height: 32px;
@@ -174,7 +134,7 @@ body {
   line-height: 32px;
   letter-spacing: 3px;
   text-align: center;
-  color: rgba(239, 108, 88, 0.5254901961);
+  color: #ef6c5886;
 }
 
 .servises__title {
@@ -207,12 +167,14 @@ body {
   position: relative;
 }
 
+
 .servises__item:hover {
-  box-shadow: 0px 0px 9px rgba(40, 41, 62, 0.4941176471);
+  box-shadow: 0px 0px 9px #28293e7e;
   cursor: pointer;
   transform: scale(1.01);
-  transition: box-shadow 0.3s ease, z-index 0s 0s ease;
-  transition: box-shadow 0.3s ease, transform 0.3s ease, z-index 0s 0s ease;
+  transition: box-shadow .3s ease, z-index 0s 0s ease;
+  transition: box-shadow .3s ease, transform .3s ease, z-index 0s 0s ease;
+  transition: box-shadow .3s ease, transform .3s ease, z-index 0s 0s ease, -webkit-transform .2s ease
 }
 
 .servises__bottom {
@@ -228,7 +190,7 @@ body {
 }
 
 .bottom__text {
-  color: rgba(57, 20, 0, 0.6392156863);
+  color: #391400A3;
   margin-right: 8px;
 }
 
@@ -284,6 +246,7 @@ body {
   line-height: 64px;
   letter-spacing: -1px;
   text-align: left;
+
 }
 
 .works__button {
@@ -315,18 +278,18 @@ body {
 }
 
 .card:after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(40, 41, 62, 0.4941176471);
+  background: #28293e7e;
 }
 
 .card:hover:after {
-  content: "";
-  background: rgba(40, 41, 62, 0);
+  content: '';
+  background: #28293e00;
 }
 
 .card_item1 {
@@ -362,11 +325,12 @@ body {
   transition: 0.4s ease-out;
 }
 
-.card:hover ~ .card {
+.card:hover~.card {
   position: relative;
   left: 50px;
   transition: 0.4s ease-out;
 }
+
 
 .card:hover .card__title {
   color: rgba(255, 255, 255, 0.474);
@@ -374,9 +338,10 @@ body {
 }
 
 .card:hover .card__subtitle {
-  background-color: rgba(255, 255, 255, 0.0901960784);
+  background-color: #ffffff17;
   color: rgba(0, 0, 0, 0.182);
   transition: all 0.3s;
+
 }
 
 .card__subtitle {
@@ -455,7 +420,7 @@ body {
 }
 
 .middle__text-content {
-  color: rgba(57, 20, 0, 0.6392156863);
+  color: #391400A3;
   font-size: 16px;
   font-weight: 400;
   line-height: 32px;
@@ -475,6 +440,7 @@ body {
   box-shadow: 0px 3px 9px rgba(57, 20, 0, 0.08);
   border-radius: 6px;
 }
+
 
 .middle__achievements {
   display: flex;
@@ -512,6 +478,7 @@ body {
 
 .features__inner {
   padding: 145px 130px 100px;
+
 }
 
 .idea {
@@ -543,6 +510,7 @@ body {
 .get-started__text {
   padding-right: 62px;
 }
+
 
 .get-started__button {
   width: 160px;
@@ -591,6 +559,7 @@ body {
   line-height: 32px;
 }
 
+
 .testimonials__inner {
   display: flex;
   flex-direction: column;
@@ -607,7 +576,7 @@ body {
   line-height: 32px;
   letter-spacing: 3px;
   text-align: center;
-  color: rgba(239, 108, 88, 0.5254901961);
+  color: #ef6c5886;
 }
 
 .testimonials__title {
@@ -634,11 +603,11 @@ body {
   position: relative;
   margin-bottom: 100px;
   margin-top: 20px;
-  box-shadow: 0px 0px 9px rgba(40, 41, 62, 0.4941176471);
+  box-shadow: 0px 0px 9px #28293e7e;
 }
 
 .testimonials__item-middle {
-  box-shadow: 0px 0px 16px rgba(40, 41, 62, 0.4941176471);
+  box-shadow: 0px 0px 16px #28293e7e;
   background: #FFFFFF;
   height: 450px;
   margin-bottom: 0;
@@ -668,7 +637,7 @@ body {
 }
 
 .testimonials__item-name::after {
-  content: "";
+  content: '';
   position: absolute;
   width: 80px;
   height: 80px;
@@ -681,6 +650,7 @@ body {
   position: absolute;
   top: 58px;
   left: 45px;
+
 }
 
 .testimonials__bottom {
@@ -738,11 +708,11 @@ body {
   color: #EF6D58;
 }
 
-.footer__list-title + .footer__list-item {
+.footer__list-title+.footer__list-item {
   margin-top: 16px;
 }
 
-.footer__list-item > a {
+.footer__list-item>a {
   font-weight: 400;
   font-size: 16px;
   line-height: 32px;
@@ -785,11 +755,13 @@ body {
   color: #FFFFFF;
 }
 
-.footer__text-link + .footer__text-link {
+.footer__text-link+.footer__text-link {
   margin-left: 68px;
 }
 
+
 @media (max-width: 1300px) {
+
   .middle__text-subtitle {
     font-size: 14px;
   }
@@ -806,6 +778,7 @@ body {
     padding-top: 90px;
     padding-right: 90px;
     padding-left: 90px;
+
   }
 
   .testimonials__items {
@@ -819,10 +792,11 @@ body {
   }
 
   .testimonials__item-middle {
-    box-shadow: 0px 0px 16px rgba(40, 41, 62, 0.4941176471);
+    box-shadow: 0px 0px 16px #28293e7e;
     background: #FFFFFF;
   }
 }
+
 @media (max-width: 1150px) {
   .container {
     padding: 0;
@@ -841,6 +815,7 @@ body {
   .header__nav {
     order: 1;
   }
+
 
   #hamnav {
     flex-grow: 0.5;
@@ -876,7 +851,7 @@ body {
   }
 
   .text__subtitle,
-.works__subtitle {
+  .works__subtitle {
     margin: 0;
     padding-top: 25px;
   }
@@ -908,6 +883,7 @@ body {
   .achievements__item {
     padding: 80px 27px 15px 27px;
     justify-content: center;
+
   }
 
   .achievements__item-icon {
@@ -941,18 +917,18 @@ body {
   }
 
   .card:after {
-    content: "";
+    content: '';
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(40, 41, 62, 0.4941176471);
+    background: #28293e7e;
   }
 
   .card:hover:after {
-    content: "";
-    background: rgba(40, 41, 62, 0);
+    content: '';
+    background: #28293e00;
   }
 
   .card_item1 {
@@ -988,11 +964,12 @@ body {
     transition: 0.4s ease-out;
   }
 
-  .card:hover ~ .card {
+  .card:hover~.card {
     position: relative;
     left: 0px;
     transition: 0.4s ease-out;
   }
+
 
   .card:hover .card__title {
     color: rgba(255, 255, 255, 0.474);
@@ -1000,9 +977,10 @@ body {
   }
 
   .card:hover .card__subtitle {
-    background-color: rgba(255, 255, 255, 0.0901960784);
+    background-color: #ffffff17;
     color: rgba(0, 0, 0, 0.182);
     transition: all 0.3s;
+
   }
 
   .card {
@@ -1040,6 +1018,7 @@ body {
     border-radius: 10px;
   }
 
+
   .features__items {
     display: flex;
     flex-direction: column;
@@ -1064,6 +1043,7 @@ body {
     margin-bottom: 13px;
   }
 
+
   .testimonials__title {
     margin: 20px 200px 50px;
   }
@@ -1087,6 +1067,7 @@ body {
     height: 370px;
   }
 }
+
 @media (max-width: 820px) {
   .get-started__svg-item {
     width: 278px;
@@ -1126,7 +1107,7 @@ body {
     flex-direction: column;
   }
 
-  .footer__text-link + .footer__text-link {
+  .footer__text-link+.footer__text-link {
     margin-left: 0;
   }
 
@@ -1152,7 +1133,9 @@ body {
     height: 430px;
   }
 }
+
 @media (max-width: 675px) {
+
   .button {
     background-color: #EF6D58;
   }
@@ -1164,8 +1147,9 @@ body {
 
   .button:hover {
     cursor: pointer;
-    transition: box-shadow 0.3s ease, z-index 0s 0s ease;
-    transition: box-shadow 0.3s ease, transform 0.3s ease, z-index 0s 0s ease;
+    transition: box-shadow .3s ease, z-index 0s 0s ease;
+    transition: box-shadow .3s ease, transform .3s ease, z-index 0s 0s ease;
+    transition: box-shadow .3s ease, transform .3s ease, z-index 0s 0s ease, -webkit-transform .2s ease
   }
 
   .header__content {
@@ -1181,7 +1165,7 @@ body {
     transition: max-height 0.25s ease-in;
   }
 
-  .nav__link + .nav__link {
+  .nav__link+.nav__link {
     margin-left: 0;
   }
 
@@ -1204,7 +1188,7 @@ body {
     border-radius: 6px;
     font-weight: 700;
     border: 1px solid;
-    border-color: rgba(255, 255, 255, 0.6392156863);
+    border-color: #ffffffa3;
   }
 
   #hamnav label:hover {
@@ -1216,7 +1200,7 @@ body {
     color: #000;
     padding: 8px;
     text-align: center;
-    border-bottom: 0.1px solid;
+    border-bottom: .1px solid;
   }
 
   #hamitems {
@@ -1228,10 +1212,11 @@ body {
     background-color: #FDF0E9;
     border-radius: 10px;
     box-shadow: 0px 0px 9px #000000;
-    transition: all 0.3s;
+    transition: all .3s;
   }
 
-  #hamnav input:checked ~ #hamitems {
+
+  #hamnav input:checked~#hamitems {
     display: flex;
     flex-direction: column;
     text-align: right;
@@ -1250,7 +1235,7 @@ body {
   }
 
   .achievements__item-title,
-.achievements__item-text {
+  .achievements__item-text {
     margin: 0;
   }
 
@@ -1274,6 +1259,7 @@ body {
   .item__icon {
     display: none;
   } */
+
   .servises__title {
     padding: 0 15px;
     font-size: 50px;
@@ -1306,7 +1292,7 @@ body {
   }
 
   .works__head,
-.features__items {
+  .features__items {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1388,8 +1374,7 @@ body {
     color: #ffffff;
     border-color: #ffffff;
   }
-}
-* {
+}* {
   box-sizing: border-box;
 }
 
@@ -1412,7 +1397,7 @@ button {
 }
 
 :hover {
-  transition: all 0.3s;
+  transition: all .3s;
 }
 
 ul {
@@ -1422,7 +1407,7 @@ ul {
 }
 
 body {
-  font-family: "Jura", sans-serif;
+  font-family: 'Jura', sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
@@ -1434,6 +1419,7 @@ body {
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 15px;
+
 }
 
 .button {
@@ -1441,7 +1427,7 @@ body {
   border-radius: 6px;
   font-weight: 700;
   border: 1px solid;
-  border-color: rgba(255, 255, 255, 0.6392156863);
+  border-color: #ffffffa3;
   color: #ffffff;
 }
 
@@ -1455,6 +1441,7 @@ body {
   background-color: #28293E;
   padding-bottom: 150px;
 }
+
 
 .greeting {
   display: flex;
@@ -1474,7 +1461,7 @@ body {
 .works__subtitle {
   margin: 0;
   padding-top: 100px;
-  color: rgba(239, 108, 88, 0.5254901961);
+  color: #ef6c5886;
   font-size: 16px;
   font-weight: 200;
   line-height: 32px;
@@ -1489,7 +1476,7 @@ body {
 }
 
 .text__content {
-  color: rgba(255, 255, 255, 0.6392156863);
+  color: #ffffffa3;
   font-size: 16px;
   font-weight: 400;
   line-height: 32px;
@@ -1519,7 +1506,7 @@ body {
   line-height: 32px;
   letter-spacing: 3px;
   text-align: center;
-  color: rgba(239, 108, 88, 0.5254901961);
+  color: #ef6c5886;
 }
 
 .servises__title {
@@ -1552,12 +1539,14 @@ body {
   position: relative;
 }
 
+
 .servises__item:hover {
-  box-shadow: 0px 0px 9px rgba(40, 41, 62, 0.4941176471);
+  box-shadow: 0px 0px 9px #28293e7e;
   cursor: pointer;
   transform: scale(1.01);
-  transition: box-shadow 0.3s ease, z-index 0s 0s ease;
-  transition: box-shadow 0.3s ease, transform 0.3s ease, z-index 0s 0s ease;
+  transition: box-shadow .3s ease, z-index 0s 0s ease;
+  transition: box-shadow .3s ease, transform .3s ease, z-index 0s 0s ease;
+  transition: box-shadow .3s ease, transform .3s ease, z-index 0s 0s ease, -webkit-transform .2s ease
 }
 
 .servises__bottom {
@@ -1573,7 +1562,7 @@ body {
 }
 
 .bottom__text {
-  color: rgba(57, 20, 0, 0.6392156863);
+  color: #391400A3;
   margin-right: 8px;
 }
 
@@ -1629,6 +1618,7 @@ body {
   line-height: 64px;
   letter-spacing: -1px;
   text-align: left;
+
 }
 
 .works__button {
@@ -1660,18 +1650,18 @@ body {
 }
 
 .card:after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(40, 41, 62, 0.4941176471);
+  background: #28293e7e;
 }
 
 .card:hover:after {
-  content: "";
-  background: rgba(40, 41, 62, 0);
+  content: '';
+  background: #28293e00;
 }
 
 .card_item1 {
@@ -1707,11 +1697,12 @@ body {
   transition: 0.4s ease-out;
 }
 
-.card:hover ~ .card {
+.card:hover~.card {
   position: relative;
   left: 50px;
   transition: 0.4s ease-out;
 }
+
 
 .card:hover .card__title {
   color: rgba(255, 255, 255, 0.474);
@@ -1719,9 +1710,10 @@ body {
 }
 
 .card:hover .card__subtitle {
-  background-color: rgba(255, 255, 255, 0.0901960784);
+  background-color: #ffffff17;
   color: rgba(0, 0, 0, 0.182);
   transition: all 0.3s;
+
 }
 
 .card__subtitle {
@@ -1800,7 +1792,7 @@ body {
 }
 
 .middle__text-content {
-  color: rgba(57, 20, 0, 0.6392156863);
+  color: #391400A3;
   font-size: 16px;
   font-weight: 400;
   line-height: 32px;
@@ -1820,6 +1812,7 @@ body {
   box-shadow: 0px 3px 9px rgba(57, 20, 0, 0.08);
   border-radius: 6px;
 }
+
 
 .middle__achievements {
   display: flex;
@@ -1857,6 +1850,7 @@ body {
 
 .features__inner {
   padding: 145px 130px 100px;
+
 }
 
 .idea {
@@ -1888,6 +1882,7 @@ body {
 .get-started__text {
   padding-right: 62px;
 }
+
 
 .get-started__button {
   width: 160px;
@@ -1936,6 +1931,7 @@ body {
   line-height: 32px;
 }
 
+
 .testimonials__inner {
   display: flex;
   flex-direction: column;
@@ -1952,7 +1948,7 @@ body {
   line-height: 32px;
   letter-spacing: 3px;
   text-align: center;
-  color: rgba(239, 108, 88, 0.5254901961);
+  color: #ef6c5886;
 }
 
 .testimonials__title {
@@ -1979,11 +1975,11 @@ body {
   position: relative;
   margin-bottom: 100px;
   margin-top: 20px;
-  box-shadow: 0px 0px 9px rgba(40, 41, 62, 0.4941176471);
+  box-shadow: 0px 0px 9px #28293e7e;
 }
 
 .testimonials__item-middle {
-  box-shadow: 0px 0px 16px rgba(40, 41, 62, 0.4941176471);
+  box-shadow: 0px 0px 16px #28293e7e;
   background: #FFFFFF;
   height: 450px;
   margin-bottom: 0;
@@ -2013,7 +2009,7 @@ body {
 }
 
 .testimonials__item-name::after {
-  content: "";
+  content: '';
   position: absolute;
   width: 80px;
   height: 80px;
@@ -2026,6 +2022,7 @@ body {
   position: absolute;
   top: 58px;
   left: 45px;
+
 }
 
 .testimonials__bottom {
@@ -2083,11 +2080,11 @@ body {
   color: #EF6D58;
 }
 
-.footer__list-title + .footer__list-item {
+.footer__list-title+.footer__list-item {
   margin-top: 16px;
 }
 
-.footer__list-item > a {
+.footer__list-item>a {
   font-weight: 400;
   font-size: 16px;
   line-height: 32px;
@@ -2130,11 +2127,13 @@ body {
   color: #FFFFFF;
 }
 
-.footer__text-link + .footer__text-link {
+.footer__text-link+.footer__text-link {
   margin-left: 68px;
 }
 
+
 @media (max-width: 1300px) {
+
   .middle__text-subtitle {
     font-size: 14px;
   }
@@ -2151,6 +2150,7 @@ body {
     padding-top: 90px;
     padding-right: 90px;
     padding-left: 90px;
+
   }
 
   .testimonials__items {
@@ -2164,10 +2164,11 @@ body {
   }
 
   .testimonials__item-middle {
-    box-shadow: 0px 0px 16px rgba(40, 41, 62, 0.4941176471);
+    box-shadow: 0px 0px 16px #28293e7e;
     background: #FFFFFF;
   }
 }
+
 @media (max-width: 1150px) {
   .container {
     padding: 0;
@@ -2186,6 +2187,7 @@ body {
   .header__nav {
     order: 1;
   }
+
 
   #hamnav {
     flex-grow: 0.5;
@@ -2221,7 +2223,7 @@ body {
   }
 
   .text__subtitle,
-.works__subtitle {
+  .works__subtitle {
     margin: 0;
     padding-top: 25px;
   }
@@ -2253,6 +2255,7 @@ body {
   .achievements__item {
     padding: 80px 27px 15px 27px;
     justify-content: center;
+
   }
 
   .achievements__item-icon {
@@ -2286,18 +2289,18 @@ body {
   }
 
   .card:after {
-    content: "";
+    content: '';
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(40, 41, 62, 0.4941176471);
+    background: #28293e7e;
   }
 
   .card:hover:after {
-    content: "";
-    background: rgba(40, 41, 62, 0);
+    content: '';
+    background: #28293e00;
   }
 
   .card_item1 {
@@ -2333,11 +2336,12 @@ body {
     transition: 0.4s ease-out;
   }
 
-  .card:hover ~ .card {
+  .card:hover~.card {
     position: relative;
     left: 0px;
     transition: 0.4s ease-out;
   }
+
 
   .card:hover .card__title {
     color: rgba(255, 255, 255, 0.474);
@@ -2345,9 +2349,10 @@ body {
   }
 
   .card:hover .card__subtitle {
-    background-color: rgba(255, 255, 255, 0.0901960784);
+    background-color: #ffffff17;
     color: rgba(0, 0, 0, 0.182);
     transition: all 0.3s;
+
   }
 
   .card {
@@ -2385,6 +2390,7 @@ body {
     border-radius: 10px;
   }
 
+
   .features__items {
     display: flex;
     flex-direction: column;
@@ -2409,6 +2415,7 @@ body {
     margin-bottom: 13px;
   }
 
+
   .testimonials__title {
     margin: 20px 200px 50px;
   }
@@ -2432,6 +2439,7 @@ body {
     height: 370px;
   }
 }
+
 @media (max-width: 820px) {
   .get-started__svg-item {
     width: 278px;
@@ -2471,7 +2479,7 @@ body {
     flex-direction: column;
   }
 
-  .footer__text-link + .footer__text-link {
+  .footer__text-link+.footer__text-link {
     margin-left: 0;
   }
 
@@ -2497,7 +2505,9 @@ body {
     height: 430px;
   }
 }
+
 @media (max-width: 675px) {
+
   .button {
     background-color: #EF6D58;
   }
@@ -2509,8 +2519,9 @@ body {
 
   .button:hover {
     cursor: pointer;
-    transition: box-shadow 0.3s ease, z-index 0s 0s ease;
-    transition: box-shadow 0.3s ease, transform 0.3s ease, z-index 0s 0s ease;
+    transition: box-shadow .3s ease, z-index 0s 0s ease;
+    transition: box-shadow .3s ease, transform .3s ease, z-index 0s 0s ease;
+    transition: box-shadow .3s ease, transform .3s ease, z-index 0s 0s ease, -webkit-transform .2s ease
   }
 
   .header__content {
@@ -2526,7 +2537,7 @@ body {
     transition: max-height 0.25s ease-in;
   }
 
-  .nav__link + .nav__link {
+  .nav__link+.nav__link {
     margin-left: 0;
   }
 
@@ -2549,7 +2560,7 @@ body {
     border-radius: 6px;
     font-weight: 700;
     border: 1px solid;
-    border-color: rgba(255, 255, 255, 0.6392156863);
+    border-color: #ffffffa3;
   }
 
   #hamnav label:hover {
@@ -2561,7 +2572,7 @@ body {
     color: #000;
     padding: 8px;
     text-align: center;
-    border-bottom: 0.1px solid;
+    border-bottom: .1px solid;
   }
 
   #hamitems {
@@ -2573,10 +2584,11 @@ body {
     background-color: #FDF0E9;
     border-radius: 10px;
     box-shadow: 0px 0px 9px #000000;
-    transition: all 0.3s;
+    transition: all .3s;
   }
 
-  #hamnav input:checked ~ #hamitems {
+
+  #hamnav input:checked~#hamitems {
     display: flex;
     flex-direction: column;
     text-align: right;
@@ -2595,7 +2607,7 @@ body {
   }
 
   .achievements__item-title,
-.achievements__item-text {
+  .achievements__item-text {
     margin: 0;
   }
 
@@ -2619,6 +2631,7 @@ body {
   .item__icon {
     display: none;
   } */
+
   .servises__title {
     padding: 0 15px;
     font-size: 50px;
@@ -2651,7 +2664,7 @@ body {
   }
 
   .works__head,
-.features__items {
+  .features__items {
     display: flex;
     flex-direction: column;
     align-items: center;
