repair broken links for background-image

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -300,25 +300,25 @@ svg {
 }
 
 .card_item1 {
-  background-image: url(/img/site-1.png);
+  background-image: url(./img/site-1.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 .card_item2 {
-  background-image: url(/img/site-2.png);
+  background-image: url(./img/site-2.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 .card_item3 {
-  background-image: url(/img/site-3.png);
+  background-image: url(./img/site-3.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 .card_item4 {
-  background-image: url(/img/site-4.png);
+  background-image: url(./img/site-4.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -944,25 +944,25 @@ svg {
   }
 
   .card_item1 {
-    background-image: url(/img/site-1.png);
+    background-image: url(./img/site-1.png);
     background-size: cover;
     background-repeat: no-repeat;
   }
 
   .card_item2 {
-    background-image: url(/img/site-2.png);
+    background-image: url(./img/site-2.png);
     background-size: cover;
     background-repeat: no-repeat;
   }
 
   .card_item3 {
-    background-image: url(/img/site-3.png);
+    background-image: url(./img/site-3.png);
     background-size: cover;
     background-repeat: no-repeat;
   }
 
   .card_item4 {
-    background-image: url(/img/site-4.png);
+    background-image: url(./img/site-4.png);
     background-size: cover;
     background-repeat: no-repeat;
   }
