--- a/css/style.css
+++ b/css/style.css
@@ -1195,7 +1195,7 @@ svg {
   height: 45px;
   margin: 0;
   border-radius: 50%;
-  background-image: radial-gradient(circle at 50% 120%, #ff5690, #d61a5a 80%, #941a44 100%);
+  background-image: radial-gradient(circle at 50% 120%, #000000, #282627 80%, #292426 100%);
   transition: all cubic-bezier(1, -0.49, 0.46, 0.8) 0.25s;
   overflow: hidden;
 }
@@ -1275,6 +1275,9 @@ svg {
 }
 .drawer:hover .ball-3 {
   transform: translate3d(50px, -50px, 0);
+}
+.drawer:hover .ball-4 {
+  transform: translate3d(-29px, -80px, 0);
 }
 .drawer:hover .cover {
   transform: translate3d(20px, 30px, 250px);
