--- a/scss/style.scss
+++ b/scss/style.scss
@@ -834,7 +834,7 @@ $drawer-open-transition: all cubic-bezier(0.92,-0.15, 0.21, 0.86) 0.25s;
   height: 45px;
   margin: 0;
   border-radius: 50%;
-  background-image: radial-gradient(circle at 50% 120%, #ff5690, #d61a5a 80%, #941a44 100%);
+  background-image: radial-gradient(circle at 50% 120%, #000000, #282627 80%, #292426 100%);
   transition: all cubic-bezier(1, -0.49, 0.46, 0.8) 0.25s;
   overflow: hidden;
 
@@ -934,6 +934,14 @@ $drawer-open-transition: all cubic-bezier(0.92,-0.15, 0.21, 0.86) 0.25s;
     ;
     -o-transform: translate3d(50px, -50px, 0);
     transform: translate3d(50px, -50px, 0);
+  }
+
+  .ball-4 {
+    -webkit-transform: translate3d(-29px, -80px, 0);
+    -moz-transform: translate3d(-29px, -80px, 0);
+    ;
+    -o-transform: translate3d(-29px, -80px, 0);
+    transform: translate3d(-29px, -80px, 0);
   }
 
   .cover {
