--- a/css/style.css
+++ b/css/style.css
@@ -679,7 +679,7 @@ svg {
 .container {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 0 5px;
 }
 
 .button {
@@ -1919,6 +1919,8 @@ svg {
   .header__content {
     position: relative;
     padding: 0;
+    margin-top: 5px;
+    margin: 0 10px;
   }
 
   .header__button {
@@ -1936,7 +1938,7 @@ svg {
     border: none;
     cursor: pointer;
     display: flex;
-    padding: 0;
+    line-height: 0px;
   }
 
   .line {
@@ -2162,7 +2164,7 @@ svg {
 }
 @media (max-width: 396px) {
   .container {
-    margin: 0 6px;
+    margin: 0 0;
   }
 
   .logo {
