--- a/css/style.css
+++ b/css/style.css
@@ -839,7 +839,7 @@ svg {
   letter-spacing: 0px;
   text-align: left;
   padding-left: 80px;
-  padding-bottom: 20px;
+  padding-bottom: 30px;
 }
 
 .item__text {
@@ -2064,6 +2064,7 @@ svg {
 
   .servises__title {
     padding: 0 15px;
+    padding-bottom: 30px;
     font-size: 50px;
   }
 
@@ -2074,6 +2075,14 @@ svg {
     border: 1px solid #F3D1BF;
     border-radius: 6px;
     position: relative;
+  }
+
+  .item__title {
+    letter-spacing: 0px;
+    text-align: left;
+    padding-left: 80px;
+    padding-top: 17px;
+    padding-bottom: 30px;
   }
 
   .servises__bottom {
@@ -2148,7 +2157,7 @@ svg {
   }
 
   .testimonials__items {
-    padding: 0 15px;
+    padding: 0;
   }
 
   .testimonials__item {
@@ -2189,6 +2198,11 @@ svg {
 
   .logo {
     margin-right: 0;
+  }
+
+  .item__title {
+    padding-top: 17px;
+    padding-bottom: 17px;
   }
 
   .middle__text-heading {
