--- a/scss/style.scss
+++ b/scss/style.scss
@@ -229,7 +229,7 @@ svg {
   letter-spacing: 0px;
   text-align: left;
   padding-left: 80px;
-  padding-bottom: 20px;
+  padding-bottom: 30px;
 }
 
 
@@ -1525,6 +1525,7 @@ $drawer-open-transition: all cubic-bezier(0.92, -0.15, 0.21, 0.86) 0.25s;
 
   .servises__title {
     padding: 0 15px;
+    padding-bottom: 30px;
     font-size: 50px;
   }
 
@@ -1535,6 +1536,14 @@ $drawer-open-transition: all cubic-bezier(0.92, -0.15, 0.21, 0.86) 0.25s;
     border: 1px solid #F3D1BF;
     border-radius: 6px;
     position: relative;
+  }
+
+  .item__title {
+    letter-spacing: 0px;
+    text-align: left;
+    padding-left: 80px;
+    padding-top: 17px;
+    padding-bottom: 30px;
   }
 
   .servises__bottom {
@@ -1609,7 +1618,7 @@ $drawer-open-transition: all cubic-bezier(0.92, -0.15, 0.21, 0.86) 0.25s;
   }
 
   .testimonials__items {
-    padding: 0 15px;
+    padding: 0;
   }
 
   .testimonials__item {
@@ -1655,6 +1664,11 @@ $drawer-open-transition: all cubic-bezier(0.92, -0.15, 0.21, 0.86) 0.25s;
 
   .logo {
     margin-right: 0;
+  }
+
+  .item__title {
+    padding-top: 17px;
+    padding-bottom: 17px;
   }
 
   .middle__text-heading {
